--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "objection": "^2.2.3",
     "web-push": "^3.4.4",
     "winston": "^3.3.3"
+  },
+  "devDependencies": {
+    "eslint": "^8.52.0"
   }
 }
