--- a/package.json
+++ b/package.json
@@ -28,14 +28,19 @@
     "form-data": "^4.0.0",
     "googleapis": "^135.1.0",
     "http-errors": "^2.0.0",
+    "jose": "^5.3.0",
+    "jsonld": "^8.3.2",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "multiparty": "^4.2.2",
+    "mustache": "^4.2.0",
     "mv": "^2.1.1",
     "mysql2": "^3.9.4",
+    "next": "^14.2.3",
     "node-cron": "^3.0.0",
+    "node-forge": "^1.3.1",
     "objection": "^3.1.4",
     "web-push": "^3.4.4",
     "winston": "^3.3.3"
