--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "node-cron": "^3.0.0",
     "node-forge": "^1.3.1",
     "objection": "^3.1.4",
+    "uuid": "^10.0.0",
     "web-push": "^3.4.4",
     "winston": "^3.3.3"
   },
