--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "./*": "./*.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -48,6 +48,7 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    "eslint": "^8.52.0"
+    "eslint": "^8.52.0",
+    "jest": "^29.7.0"
   }
 }
